--- a/index.html
+++ b/index.html
@@ -7,7 +7,24 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    
+<body class="debug">
+    <header id="site_header">
+        <div class="container">
+            <div class="row d-flex">
+                <div class="logo"></div>
+                <nav class="menu">
+                    <ul class="d-flex">
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                        <li><a href=""></a></li>
+                    </ul>
+                </nav>
+                <div class="menu_icon"></div>
+            </div>
+        </div>
+    </header>
+    <!-- /#site_header -->
 </body>
 </html>
