--- a/index.html
+++ b/index.html
@@ -26,5 +26,20 @@
         </div>
     </header>
     <!-- /#site_header -->
+
+    <main id="site_main">
+        <section class="demo_section">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="card col-8"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- /#site_main -->
 </body>
 </html>
