Complete debug planning section

--- a/index.html
+++ b/index.html
@@ -39,6 +39,17 @@
                 </div>
             </div>
         </section>
+        <!-- /.demo_section -->
+
+        <section class="planning_section">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="col col-6"></div>
+                    <div class="col col-6"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /.planning_section -->
     </main>
     <!-- /#site_main -->
 </body>
