--- a/index.html
+++ b/index.html
@@ -50,6 +50,16 @@
             </div>
         </section>
         <!-- /.planning_section -->
+
+        <section class="testimonials_section">
+            <div class="container">
+                <div class="content col-12"></div>
+                <div class="card col-12 d-flex"></div>
+                <div class="card col-12 d-flex"></div>
+                <div class="card col-12 d-flex"></div>
+            </div>
+        </section>
+        <!-- /.testimonials_section -->
     </main>
     <!-- /#site_main -->
 </body>
