Complete debug benefits section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,20 @@
             </div>
         </section>
         <!-- /.testimonials_section -->
+
+        <section class="benefits_section">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                    <div class="card col-4"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /.benefits_section -->
     </main>
     <!-- /#site_main -->
 </body>
