Complete debug about section

--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
             </div>
         </section>
         <!-- /.benefits_section -->
+
+        <section class="about_section">
+            <div class="container">
+                <div class="row d-flex">
+                    <div class="col col-8"></div>
+                    <div class="col col-4"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /.about_section -->
     </main>
     <!-- /#site_main -->
 </body>
