Complete debug pricing section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,15 @@
             </div>
         </section>
         <!-- /.about_section -->
+
+        <section class="pricing_section">
+            <div class="container">
+                <div class="secondary_container">
+                    <div class="content"></div>
+                </div>
+            </div>
+        </section>
+        <!-- /.pricing_section -->
     </main>
     <!-- /#site_main -->
 </body>
