Complete debug footer

--- a/index.html
+++ b/index.html
@@ -95,5 +95,14 @@
         <!-- /.pricing_section -->
     </main>
     <!-- /#site_main -->
+
+    <footer id="site_footer">
+        <div class="container">
+            <div class="secondary_container">
+                <div class="content"></div>
+            </div>
+        </div>
+    </footer>
+    <!-- /#site_footer -->
 </body>
 </html>
