--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         <section class="planning_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="col col-6"></div>
-                    <div class="col col-6"></div>
+                    <div class="col col-6 col-md-12"></div>
+                    <div class="col col-6 col-md-12"></div>
                 </div>
             </div>
         </section>
@@ -64,12 +64,12 @@
         <section class="benefits_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="card col-4"></div>
-                    <div class="card col-4"></div>
-                    <div class="card col-4"></div>
-                    <div class="card col-4"></div>
-                    <div class="card col-4"></div>
-                    <div class="card col-4"></div>
+                    <div class="card col-4 col-md-6"></div>
+                    <div class="card col-4  col-md-6"></div>
+                    <div class="card col-4 col-md-6"></div>
+                    <div class="card col-4 col-md-6"></div>
+                    <div class="card col-4 col-md-6"></div>
+                    <div class="card col-4 col-md-6"></div>
                 </div>
             </div>
         </section>
