--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <section class="demo_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="card col-8 col-sm-12"></div>
-                    <div class="card col-4 col-sm-12"></div>
-                    <div class="card col-4 col-sm-12"></div>
-                    <div class="card col-4 col-sm-12"></div>
-                    <div class="card col-4 col-sm-12"></div>
+                    <div class="card col-md-8 col-12"></div>
+                    <div class="card col-md-4 col-12"></div>
+                    <div class="card col-md-4 col-12"></div>
+                    <div class="card col-md-4 col-12"></div>
+                    <div class="card col-md-4 col-12"></div>
                 </div>
             </div>
         </section>
@@ -44,8 +44,8 @@
         <section class="planning_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="col col-6 col-md-12"></div>
-                    <div class="col col-6 col-md-12"></div>
+                    <div class="col col-lg-6 col-12"></div>
+                    <div class="col col-lg-6 col-12"></div>
                 </div>
             </div>
         </section>
@@ -64,12 +64,12 @@
         <section class="benefits_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="card col-4 col-md-6  col-sm-12"></div>
-                    <div class="card col-4  col-md-6 col-sm-12"></div>
-                    <div class="card col-4 col-md-6 col-sm-12"></div>
-                    <div class="card col-4 col-md-6 col-sm-12"></div>
-                    <div class="card col-4 col-md-6 col-sm-12"></div>
-                    <div class="card col-4 col-md-6 col-sm-12"></div>
+                    <div class="card col-lg-4 col-md-6  col-12"></div>
+                    <div class="card col-lg-4  col-md-6 col-12"></div>
+                    <div class="card col-lg-4 col-md-6 col-12"></div>
+                    <div class="card col-lg-4 col-md-6 col-12"></div>
+                    <div class="card col-lg-4 col-md-6 col-12"></div>
+                    <div class="card col-lg-4 col-md-6 col-12"></div>
                 </div>
             </div>
         </section>
@@ -78,8 +78,8 @@
         <section class="about_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="col col-8 col-sm-12"></div>
-                    <div class="col col-4 col-sm-12"></div>
+                    <div class="col col-md-8 col-12"></div>
+                    <div class="col col-md-4 col-12"></div>
                 </div>
             </div>
         </section>
