--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body class="debug">
+<body class="">
     <header id="site_header">
         <div class="container">
             <div class="row d-flex">
-                <div class="logo"></div>
+                <div class="logo">
+                    <img src="./img/logo.png" alt="">
+                </div>
                 <nav class="menu">
                     <ul class="d-flex">
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
-                        <li><a href=""></a></li>
+                        <li><a href="">Planning</a></li>
+                        <li><a href="">Testimonials</a></li>
+                        <li><a href="">Features</a></li>
+                        <li><a href="">About Us</a></li>
+                        <li><a class="btn" href="">Get Started</a></li>
                     </ul>
                 </nav>
-                <div class="menu_icon"></div>
+                <div class="menu_icon">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
         </div>
     </header>
