Complete demo section

--- a/index.html
+++ b/index.html
@@ -35,11 +35,64 @@
         <section class="demo_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="card col-md-8 col-12"></div>
-                    <div class="card col-md-4 col-12"></div>
-                    <div class="card col-md-4 col-12"></div>
-                    <div class="card col-md-4 col-12"></div>
-                    <div class="card col-md-4 col-12"></div>
+                    <div class="card_container col-md-8 col-12">
+                        <div class="card d-flex">
+                            <div class="card_items col-12 col-lg-6">
+                                <h2>Get a demo aplication</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique tenetur excepturi dicta, a sunt, blanditiis ea ducimus mollitia aliquid, tempora dolore! At quae magni molestias eligendi iusto sed, odit ex.</p>
+                                <div class="btn tx-center">
+                                    <i class="fa-brands fa-apple"></i> App Store
+                                </div>
+                            </div>
+                            <div class="card_items col-12 col-md-6 flex-end">
+                                <img src="./img/phone.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card_container col-md-4 col-12">
+                        <div class="card">
+                            <div class="card_items tx-center">
+                                <div class="icon">
+                                    <i class="fa-solid fa-file-code"></i>
+                                </div>
+                                <h2>Clean Code</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eaque placeat illum error eveniet quibusdam laborum sed sequi maxime quisquam quas et officia tempora iste, ducimus minus voluptates dolor beatae?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card_container col-md-4 col-12">
+                        <div class="card">
+                            <div class="card_items tx-center">
+                                <div class="icon">
+                                    <i class="fa-solid fa-compass-drafting"></i>
+                                </div>
+                                <h2>Web Design</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eaque placeat illum error eveniet quibusdam laborum sed sequi maxime quisquam quas et officia tempora iste, ducimus minus voluptates dolor beatae?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card_container col-md-4 col-12">
+                        <div class="card">
+                            <div class="card_items tx-center">
+                                <div class="icon">
+                                    <i class="fa-solid fa-laptop-code"></i>
+                                </div>
+                                <h2>Development</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eaque placeat illum error eveniet quibusdam laborum sed sequi maxime quisquam quas et officia tempora iste, ducimus minus voluptates dolor beatae?</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card_container col-md-4 col-12">
+                        <div class="card">
+                            <div class="card_items tx-center">
+                                <div class="icon">
+                                    <i class="fa-solid fa-bullhorn"></i>
+                                </div>
+                                <h2>Branding</h2>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti eaque placeat illum error eveniet quibusdam laborum sed sequi maxime quisquam quas et officia tempora iste, ducimus minus voluptates dolor beatae?</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
