Complete planning section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                     <i class="fa-brands fa-apple"></i> App Store
                                 </div>
                             </div>
-                            <div class="card_items col-12 col-md-6 flex-end">
+                            <div class="card_items col-12 col-lg-6 flex-end">
                                 <img src="./img/phone.png" alt="">
                             </div>
                         </div>
@@ -101,8 +101,19 @@
         <section class="planning_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="col col-lg-6 col-12"></div>
-                    <div class="col col-lg-6 col-12"></div>
+                    <div class="col col-lg-6 col-12">
+                        <img class="pb-20" src="./img/planning1.png" alt="">
+                        <h2 class="pb-12">Strategic Planning</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illo nihil praesentium expedita nesciunt laborum. Laudantium enim voluptatum pariatur praesentium repudiandae, quia doloribus nihil harum dignissimos, modi, excepturi ipsam vel.</p>
+                    </div>
+                    <div class="col col-lg-6 col-12 flex-end">
+                        <div class="card tx-center d-flex">
+                            <img class="img_sm" src="./img/planning2.png" alt="">
+                            <h2>App Development</h2>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus laudantium ratione illo reprehenderit temporibus id.</p>
+                            <i class="fa-solid fa-arrow-down icon"></i>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
