--- a/index.html
+++ b/index.html
@@ -121,10 +121,32 @@
 
         <section class="testimonials_section">
             <div class="container">
-                <div class="content col-12"></div>
-                <div class="card col-12 d-flex"></div>
-                <div class="card col-12 d-flex"></div>
-                <div class="card col-12 d-flex"></div>
+                <div class="content col-12 tx-center">
+                    <div class="subtitle">testimonials</div>
+                    <h2>We are committed expert partners</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, et. Dolorem pariatur soluta quae laboriosam, autem aliquam quidem necessitatibus mollitia quisquam alias enim illo reprehenderit ipsam placeat, libero quis porro?</p>
+                </div>
+                <div class="card col-12 d-flex">
+                    <img src="./img/testimonial1.jpg" alt="" class="avatar">
+                    <div class="card_text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae, illo ab tempora doloribus maiores eius praesentiu</p>
+                        <div class="name">Nat Reynolds</div>
+                    </div>
+                </div>
+                <div class="card col-12 d-flex">
+                    <img src="./img/testimonial2.jpg" alt="" class="avatar">
+                    <div class="card_text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae, illo ab tempora doloribus maiores eius</p>
+                        <div class="name">Celia Almeda</div>
+                    </div>
+                </div>
+                <div class="card col-12 d-flex">
+                    <img src="./img/testimonial3.jpg" alt="" class="avatar">
+                    <div class="card_text">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae, illo ab tempora doloribus maiores eius praesentium nemo</p>
+                        <div class="name">Bob Roberts</div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /.testimonials_section -->
