--- a/index.html
+++ b/index.html
@@ -154,12 +154,54 @@
         <section class="benefits_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="card col-lg-4 col-md-6  col-12"></div>
-                    <div class="card col-lg-4  col-md-6 col-12"></div>
-                    <div class="card col-lg-4 col-md-6 col-12"></div>
-                    <div class="card col-lg-4 col-md-6 col-12"></div>
-                    <div class="card col-lg-4 col-md-6 col-12"></div>
-                    <div class="card col-lg-4 col-md-6 col-12"></div>
+                    <div class="card_container col-lg-4 col-md-6 col-12">
+                        <div class="card">
+                            <h2>01</h2>
+                            <h3>Hight Quality</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <div class="btn">more</div>
+                        </div>
+                    </div>
+                    <div class="card_container col-lg-4 col-md-6 col-12">
+                        <div class="card">
+                            <h2>02</h2>
+                            <h3>Creative Team</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <div class="btn">more</div>
+                        </div>
+                    </div>
+                    <div class="card_container col-lg-4 col-md-6 col-12">
+                        <div class="card">
+                            <h2>03</h2>
+                            <h3>Amazing Results</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <div class="btn">more</div>
+                        </div>
+                    </div>
+                    <div class="card_container col-lg-4 col-md-6 col-12">
+                        <div class="card">
+                            <h2>04</h2>
+                            <h3>Best Pricing</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <div class="btn">more</div>
+                        </div>
+                    </div>
+                    <div class="card_container col-lg-4 col-md-6 col-12">
+                        <div class="card">
+                            <h2>05</h2>
+                            <h3>Innovation</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <div class="btn">more</div>
+                        </div>
+                    </div>
+                    <div class="card_container col-lg-4 col-md-6 col-12">
+                        <div class="card">
+                            <h2>06</h2>
+                            <h3>24/7 Support</h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <div class="btn">more</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
