--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
         <section class="benefits_section">
             <div class="container">
                 <div class="row d-flex">
+                    <h2 class="col-12 tx-center">Benefits of working with us</h2>
                     <div class="card_container col-lg-4 col-md-6 col-12">
                         <div class="card">
                             <h2>01</h2>
