Complete about section

--- a/index.html
+++ b/index.html
@@ -211,8 +211,22 @@
         <section class="about_section">
             <div class="container">
                 <div class="row d-flex">
-                    <div class="col col-md-8 col-12"></div>
-                    <div class="col col-md-4 col-12"></div>
+                    <div class="col col-md-8 col-12">
+                        <h2>About Us</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni repudiandae aut et, sunt recusandae vero vitae ex! Nobis tempore doloribus ipsam quas? Sequi sapiente minima modi vitae nemo cum eos! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis excepturi quibusdam quo deserunt sequi ipsa, illum aliquam modi facilis temporibus, labore optio consequuntur possimus. Qui sunt recusandae voluptates deserunt in? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam commodi placeat consectetur tenetur est eveniet ducimus ipsa pariatur corrupti quidem delectus quam at nostrum blanditiis, odio reiciendis ratione quas vitae.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda sapiente quos aliquam, culpa minima enim id itaque impedit veritatis maxime, aperiam molestias provident doloribus qui ipsum? Unde corrupti itaque dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid deleniti facilis soluta impedit neque molestiae. Doloribus aperiam minus nesciunt quidem neque libero, a magni quia culpa quas, ducimus natus. Quos.</p>
+                    </div>
+                    <div class="col col-md-4 col-12">
+                        <div class="about_avatar">
+                            <img src="./img/about.jpg" alt="">
+                            <div class="detail">&ldquo;</div>
+                            <h3>I help companies tincidunt torto aliquam nulla facilisi cras fermentum odio.</h3>
+                            <div class="btn">
+                                <i class="icon fa-brands fa-linkedin"></i>
+                                Find me on linkedin
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
