--- a/index.html
+++ b/index.html
@@ -235,7 +235,14 @@
         <section class="pricing_section">
             <div class="container">
                 <div class="secondary_container">
-                    <div class="content"></div>
+                    <div class="content tx-center">
+                        <h5 class="py-4">GET STARTED</h5>
+                        <h3>Simple, Trasparent Pricing</h3>
+                        <h2>It's Free!</h2>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis dolorum deleniti nulla totam vero necessitatibus.</p>
+                        <div class="btn">Get Started</div>
+                        
+                    </div>
                 </div>
             </div>
         </section>
