--- a/index.html
+++ b/index.html
@@ -253,7 +253,12 @@
     <footer id="site_footer">
         <div class="container">
             <div class="secondary_container">
-                <div class="content"></div>
+                <div class="content tx-center">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, nisi vitae veritatis suscipit quisquam possimus cupiditate ratione distinctio facere, natus repellat?</p>
+                    <p><a href="">Lorem ipsum</a> dolor, sit amet <a href="">consectetur</a> 
+                    <br>
+                        <a href="">adipisicing</a></p>
+                </div>
             </div>
         </div>
     </footer>
