--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body class="">
@@ -36,7 +39,7 @@
             <div class="container">
                 <div class="row d-flex">
                     <div class="card_container col-md-8 col-12">
-                        <div class="card d-flex">
+                        <div class="card d-flex pb-0">
                             <div class="card_items col-12 col-lg-6">
                                 <h2>Get a demo aplication</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique tenetur excepturi dicta, a sunt, blanditiis ea ducimus mollitia aliquid, tempora dolore! At quae magni molestias eligendi iusto sed, odit ex.</p>
@@ -103,7 +106,7 @@
                 <div class="row d-flex">
                     <div class="col col-lg-6 col-12">
                         <img class="pb-20" src="./img/planning1.png" alt="">
-                        <h2 class="pb-12">Strategic Planning</h2>
+                        <h2 class="pb-8">Strategic Planning</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore illo nihil praesentium expedita nesciunt laborum. Laudantium enim voluptatum pariatur praesentium repudiandae, quia doloribus nihil harum dignissimos, modi, excepturi ipsam vel.</p>
                     </div>
                     <div class="col col-lg-6 col-12 flex-end">
@@ -124,26 +127,26 @@
                 <div class="content col-12 tx-center">
                     <div class="subtitle">testimonials</div>
                     <h2>We are committed expert partners</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, et. Dolorem pariatur soluta quae laboriosam, autem aliquam quidem necessitatibus mollitia quisquam alias enim illo reprehenderit ipsam placeat, libero quis porro?</p>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum, et. Dolorem pariatur soluta quae laboriosam, autem aliquam quidem necessitatibus mollitia quisquam alias enim illo reprehenderit ipsam placeat</p>
                 </div>
                 <div class="card col-12 d-flex">
                     <img src="./img/testimonial1.jpg" alt="" class="avatar">
-                    <div class="card_text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae, illo ab tempora doloribus maiores eius praesentiu</p>
+                    <div class="card_text tx-center tx-md-left">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae</p>
                         <div class="name">Nat Reynolds</div>
                     </div>
                 </div>
                 <div class="card col-12 d-flex">
                     <img src="./img/testimonial2.jpg" alt="" class="avatar">
-                    <div class="card_text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae, illo ab tempora doloribus maiores eius</p>
+                    <div class="card_text tx-center tx-md-left">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae</p>
                         <div class="name">Celia Almeda</div>
                     </div>
                 </div>
                 <div class="card col-12 d-flex">
                     <img src="./img/testimonial3.jpg" alt="" class="avatar">
-                    <div class="card_text">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae, illo ab tempora doloribus maiores eius praesentium nemo</p>
+                    <div class="card_text tx-center tx-md-left">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, at. Vitae necessitatibus rerum earum inventore pariatur consequuntur sed beatae</p>
                         <div class="name">Bob Roberts</div>
                     </div>
                 </div>
@@ -159,7 +162,7 @@
                         <div class="card">
                             <h2>01</h2>
                             <h3>Hight Quality</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque</p>
                             <div class="btn">more</div>
                         </div>
                     </div>
@@ -167,7 +170,7 @@
                         <div class="card">
                             <h2>02</h2>
                             <h3>Creative Team</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque</p>
                             <div class="btn">more</div>
                         </div>
                     </div>
@@ -175,7 +178,7 @@
                         <div class="card">
                             <h2>03</h2>
                             <h3>Amazing Results</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque</p>
                             <div class="btn">more</div>
                         </div>
                     </div>
@@ -183,7 +186,7 @@
                         <div class="card">
                             <h2>04</h2>
                             <h3>Best Pricing</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque</p>
                             <div class="btn">more</div>
                         </div>
                     </div>
@@ -191,7 +194,7 @@
                         <div class="card">
                             <h2>05</h2>
                             <h3>Innovation</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque</p>
                             <div class="btn">more</div>
                         </div>
                     </div>
@@ -199,7 +202,7 @@
                         <div class="card">
                             <h2>06</h2>
                             <h3>24/7 Support</h3>
-                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque, saepe doloribus voluptatem odio, doloremque expedita quam cum eius facere?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam rerum magni reiciendis illo, harum unde consequatur veritatis repudiandae error eaque</p>
                             <div class="btn">more</div>
                         </div>
                     </div>
@@ -217,14 +220,14 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda sapiente quos aliquam, culpa minima enim id itaque impedit veritatis maxime, aperiam molestias provident doloribus qui ipsum? Unde corrupti itaque dolorem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid deleniti facilis soluta impedit neque molestiae. Doloribus aperiam minus nesciunt quidem neque libero, a magni quia culpa quas, ducimus natus. Quos.</p>
                     </div>
                     <div class="col col-md-4 col-12">
-                        <div class="about_avatar">
+                        <div class="about_avatar col-6 col-md-12">
                             <img src="./img/about.jpg" alt="">
                             <div class="detail">&ldquo;</div>
-                            <h3>I help companies tincidunt torto aliquam nulla facilisi cras fermentum odio.</h3>
-                            <div class="btn">
-                                <i class="icon fa-brands fa-linkedin"></i>
-                                Find me on linkedin
-                            </div>
+                        </div>                            
+                        <h3>I help companies tincidunt torto aliquam nulla facilisi cras fermentum odio.</h3>
+                        <div class="btn">
+                            <i class="icon fa-brands fa-linkedin"></i>
+                            Find me on linkedin
                         </div>
                     </div>
                 </div>
@@ -241,6 +244,7 @@
                         <h2>It's Free!</h2>
                         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis dolorum deleniti nulla totam vero necessitatibus.</p>
                         <div class="btn">Get Started</div>
+                        <p>Copiright 2021 Boolean <i class=" dot fa-solid fa-circle"></i> Classe XX <i class="dot fa-solid fa-circle"></i> <a href="">Privacy Polici</a></p>
                         
                     </div>
                 </div>
@@ -257,7 +261,7 @@
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio, nisi vitae veritatis suscipit quisquam possimus cupiditate ratione distinctio facere, natus repellat?</p>
                     <p><a href="">Lorem ipsum</a> dolor, sit amet <a href="">consectetur</a> 
                     <br>
-                        <a href="">adipisicing</a></p>
+                        <a href="">Carears</a></p>
                 </div>
             </div>
         </div>
